--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -17,9 +17,10 @@
             <button class="dropdown-btn" onclick="toggleDropdown('dropdownTurma')"><img src="img/turma.png" alt="">
                 Turmas</button>
             <div class="dropdown-content" id="dropdownTurma">
-                <a href="#" onclick="openPop(event, 'criarTurma')"><img src="img/mais.png" alt="" id="criar-turma">Criar turma</a>
+                <a href="#" onclick="openPop(event, 'criarTurma')"><img src="img/mais.png" alt="" id="criar-turma">Criar
+                    turma</a>
                 <a href="#" onclick="aparecerConteiner('gerenciarTurma')"><img src="img/gerenciar-turma.png"
-                    alt="">Gerenciar turmas</a>
+                        alt="">Gerenciar turmas</a>
             </div>
         </div>
         <div class="dropdown">
@@ -28,7 +29,8 @@
                 Lista de presença</button>
         </div>
         <div class="dropdown">
-            <button class="dropdown-btn" onclick="toggleDropdown('dropdownCalendario')"><img src="img/calendario.png" alt="">
+            <button class="dropdown-btn" onclick="toggleDropdown('dropdownCalendario')"><img src="img/calendario.png"
+                    alt="">
                 Calendario</button>
             <div class="dropdown-content" id="dropdownCalendario">
                 <a href="#"><img src="img/agendar.png" alt="">Agendar aula</a>
@@ -49,7 +51,7 @@
                     alt="">
                 Material didático</button>
             <div class="dropdown-content" id="dropdownMaterial">
-                <a href="#"><img src="img/envio.png" alt="">Postar material</a>
+                <a href="#" onclick="aparecerConteiner('materialDidatico')"><img src="img/envio.png" alt="">Postar material</a>
                 <a href="#"><img src="img/caderno-alternativo.png" alt="">Gerenciar material</a>
             </div>
         </div>
@@ -69,7 +71,7 @@
             <hr>
             <form id="formCriarTurma" method="POST" action="/cadastrarTurma">
                 <label for="nome" class="form-label">Nome da Turma:</label>
-                <input type="text" class="form-control" id="nome" name="nome" required><br> 
+                <input type="text" class="form-control" id="nome" name="nome" required><br>
 
                 <label for="secao">Seção:</label>
                 <input type="text" class="form-control" id="secao" name="secao"><br>
@@ -91,7 +93,7 @@
             <hr>
             <form id="formCriarTurma" method="POST" action="/editarTurma">
                 <label for="nome" class="form-label">Nome da Turma:</label>
-                <input type="text" class="form-control" id="nome" name="nome" required><br> 
+                <input type="text" class="form-control" id="nome" name="nome" required><br>
 
                 <label for="secao">Seção:</label>
                 <input type="text" class="form-control" id="secao" name="secao"><br>
@@ -123,6 +125,59 @@
                     <button><img src="img/engrenagem.png" alt=""></button>
                     <button><img src="img/excluir.png" alt=""></button>
                 </div>
+            </div>
+        </section>
+        <section class="material-didatico" id="materialDidatico">
+            <br><h1>Gerenciar material didatico</h1><br><br>
+            <div class="container-lista">
+                <h1>Disciplina</h1>
+                <h2>Nome da Turma</h2>
+                <h3>3 ano</h3>
+                <h4>G88405</h4>
+                <div class="acoes-turma">
+                    <button onclick="openPop(event, 'postarMaterial')"><img src="img/botao-adicionar.png"
+                        alt=""></button>
+                    <button><img src="img/engrenagem.png" alt=""></button>
+                </div>
+            </div>
+            <div class="container-postar-material" id="postarMaterial">
+                <h1>Postar Material</h1>
+                <hr>
+                <form id="formPostarMaterial" method="POST" action="/postarMaterial" enctype="multipart/form-data">
+                    <label for="tipoMaterial">Tipo de Material:</label>
+                    <select class="form-select" id="tipoMaterial" name="tipoMaterial" onchange="toggleMaterialType()">
+                        <option value="arquivo">Arquivo</option>
+                        <option value="texto">Texto</option>
+                        <option value="link">Link</option>
+                    </select><br>
+
+                    <label for="titulo">Título do Material:</label>
+                    <input type="text" class="form-control" id="titulo" name="titulo" required><br>
+
+                    <label for="descricao">Descrição:</label>
+                    <textarea class="form-control" id="descricao" name="descricao"></textarea><br>
+
+                    <div id="campoArquivo">
+                        <label for="arquivo">Anexar Arquivo:</label>
+                        <input class="form-control" type="file" id="arquivo" name="arquivo"><br>
+                    </div>
+
+                    <div id="campoTexto" style="display: none;">
+                        <label for="conteudoTexto">Conteúdo do Texto:</label>
+                        <textarea class="form-control" id="conteudoTexto" name="conteudoTexto"></textarea><br>
+                    </div>
+
+                    <div id="campoLink" style="display: none;">
+                        <label for="url">Link Externo:</label>
+                        <input type="url" class="form-control" id="url" name="url" placeholder="https://..."><br>
+                    </div>
+
+                    <div class="btn-postar-material">
+                        <input type="reset" value="Cancelar" class="btn-acao-material"
+                            onclick="closePop('postarMaterial')">
+                        <input type="submit" value="Postar Material" class="btn-acao-material">
+                    </div>
+                </form>
             </div>
         </section>
     </div>
