--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
                 <a href="#" onclick="openPop(event, 'criarTurma')"><img src="img/mais.png" alt="" id="criar-turma">Criar
                     turma</a>
                 <a href="#" onclick="aparecerConteiner('gerenciarTurma')"><img src="img/gerenciar-turma.png"
-                        alt="">Gerenciar turmas</a>
+                    alt="">Gerenciar turmas</a>
             </div>
         </div>
         <div class="dropdown">
@@ -51,7 +51,8 @@
                     alt="">
                 Material didático</button>
             <div class="dropdown-content" id="dropdownMaterial">
-                <a href="#" onclick="aparecerConteiner('materialDidatico')"><img src="img/envio.png" alt="">Postar material</a>
+                <a href="#" onclick="aparecerConteiner('materialDidatico')"><img src="img/envio.png" alt="">Postar
+                    material</a>
                 <a href="#"><img src="img/caderno-alternativo.png" alt="">Gerenciar material</a>
             </div>
         </div>
@@ -122,21 +123,63 @@
                 <h4>G88405</h4>
                 <div class="acoes-turma">
                     <button onclick="openPop(event, 'editarTurma')"><img src="img/editar.png" alt=""></button>
-                    <button><img src="img/engrenagem.png" alt=""></button>
+                    <button onclick="toggleGerenciarTurma()"><img src="img/engrenagem.png" alt=""></button>
                     <button><img src="img/excluir.png" alt=""></button>
                 </div>
             </div>
         </section>
+        <section class="gerenciar-turma-aluno" id="turmaAluno">
+            <h1>Gerenciar Aluno</h1>
+            <button class="btn btn-secondary" type="reset" onclick="closePop('turmaAluno')">Voltar</button>
+            <button class="btn btn-primary" type="submit" onclick="openPop(event, 'conteinerAluno')">Adicionar Aluno</button>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col"></th>
+                        <th scope="col">Matricula</th>
+                        <th scope="col">Nome</th>
+                        <th scope="col">Serie</th>
+                        <th scope="col">Telefone</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">ações</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <th>123456789</th>
+                        <td>Taylor</td>
+                        <td>Serie</td>
+                        <td>(71) 9 9704-7379</td>
+                        <td>taylor.souza@@estudante.senai.ba</td>
+                        <td>
+                            <button class="acao-aluno"><img src="img/excluir.png" alt=""></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="conteiner-aluno" id="conteinerAluno">
+                <h1>Adicionar aluno</h1><br>
+                <div class="input-group mb-3">
+                    <span class="input-group-text" id="basic-addon1"><img src="img/lupa.png" alt=""></span>
+                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                </div> 
+                <div class="btn-add-aluno">      
+                    <button class="btn-acao-material" onclick="closePop('conteinerAluno')">Cancelar</button>
+                    <button type="submit" class="btn-acao-material">Adicionar</button>
+                </div>
+            </div>
+        </section>
         <section class="material-didatico" id="materialDidatico">
-            <br><h1>Gerenciar material didatico</h1><br><br>
+            <br>
+            <h1>Gerenciar material didatico</h1><br><br>
             <div class="container-lista">
                 <h1>Disciplina</h1>
                 <h2>Nome da Turma</h2>
                 <h3>3 ano</h3>
                 <h4>G88405</h4>
                 <div class="acoes-turma">
-                    <button onclick="openPop(event, 'postarMaterial')"><img src="img/botao-adicionar.png"
-                        alt=""></button>
+                    <button onclick="openPop(event, 'postarMaterial')"><img src="img/botao-adicionar.png" alt=""></button>
                     <button><img src="img/engrenagem.png" alt=""></button>
                 </div>
             </div>
