--- a/wwwroot/css/professor.css
+++ b/wwwroot/css/professor.css
@@ -275,11 +275,11 @@ body {
 }
 
 .material-didatico {
-    display: none;
-    width: 100%;
-    height: 92vh;
-    align-items: center;
-    flex-direction: column;
+  display: none;
+  width: 100%;
+  height: 92vh;
+  align-items: center;
+  flex-direction: column;
 }
 
 .container-postar-material {
@@ -383,5 +383,124 @@ body {
 }
 
 #arquivo {
-    width: 100%;
+  width: 100%;
+}
+
+.acao-turma {
+  background-color: #ffffff;
+  border: 2px solid #ddd;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.acao-turma:hover {
+  background-color: #f5f5f5;
+  border: 2px solid #bbb;
+}
+
+.acao-turma img {
+  width: 18px;
+  height: 18px;
+}
+
+.gerenciar-turma-aluno h1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn.btn-primary {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.conteiner-aluno {
+  position: fixed;
+  top: 53%;
+  left: 60%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 80%;
+  display: none;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 8px;
+  overflow-y: auto;
+}
+
+.btn-add-aluno {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+}
+
+.btn-add-aluno button {
+  margin-right: 10px;
+}
+
+.table {
+  background-color: #fff;
+  border-collapse: collapse;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+}
+
+.table thead th {
+  background-color: #007bff;
+  color: #ffffff;
+  font-weight: bold;
+  text-align: center; 
+  padding: 10px;
+}
+
+.table tbody td, 
+.table tbody th {  
+  text-align: center;
+  vertical-align: middle;
+  white-space: nowrap;
+}
+
+.table tbody tr:nth-of-type(even) {
+  background-color: #f2f2f2;
+}
+
+.table tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+.acao-aluno {
+  background-color: #ffffff;
+  border: 2px solid #ddd;
+  border-radius: 50%;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  transition: background-color 0.3s, border 0.3s;
+}
+
+.acao-aluno:hover {
+  background-color: #f5f5f5;
+  border: 2px solid #bbb;
+}
+
+.acao-aluno img {
+  width: 18px;
+  height: 18px;
+}
+
+.gerenciar-turma-aluno {
+  display: none;
+  width: 100%;
+  height: 10%;
+  align-items: center;
+  flex-direction: column;
 }
