--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
     <script src="~/js/professor.js"></script>
 }
 
-<div class="frame">
-    <div class="side-bar" role="navigation">
+<div class="frame" >
+    <div class="side-bar" id="menu" role="navigation">
         <h3>Menu</h3>
         <div class="dropdown">
             <button class="dropdown-btn" onclick="toggleDropdown('dropdownTurma')"><img src="img/turma.png" alt="">
