--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -2,6 +2,13 @@ html {
   font-size: 14px;
 }
 
+#menu{
+  display: flex;
+  position: relative;
+  flex-wrap: wrap;
+  min-width: 250px;
+}
+
 @media (min-width: 768px) {
   html {
     font-size: 16px;
