--- a/wwwroot/css/professor.css
+++ b/wwwroot/css/professor.css
@@ -84,7 +84,7 @@ body {
 }
 
 .dropdown-content a {
-  color: white;
+  color: rgb(255, 255, 255);
   padding: 10px;
   text-decoration: none;
   display: flex;
@@ -121,6 +121,7 @@ body {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   padding: 20px;
   border-radius: 8px;
+  min-width: 360px;
 }
 
 .criar-turma form {
@@ -134,6 +135,26 @@ body {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+
+@media (min-width: 400px) and (max-width: 1089px){
+    .btn-criar-turma {
+      display: flex;
+      width: 0%;
+      position: relative;
+      justify-content: start;
+      align-items: center;
+      content: "Criar";
+      min-width: 500px;
+    }
+    
+    .criar-turma {
+      width: 20%;
+      display: none;
+      position: absolute;
+      left: 50%;
+      height: 50%;
+    }
 }
 
 .btn-acao-turma {
